[gd_scene load_steps=16 format=3 uid="uid://6iwvbo1m5m6b"]

[ext_resource type="Script" path="res://Scenes/AudioScene/audio_player.gd" id="1_xlrje"]
[ext_resource type="AudioStream" uid="uid://dg76nxsecl12p" path="res://Audio/SFX/UI/Blip_Select_Mix.wav" id="2_lq12b"]
[ext_resource type="AudioStream" uid="uid://bu2k1ttmler27" path="res://Audio/SFX/UI/Blip_Select_Mix2.wav" id="3_mjbdb"]
[ext_resource type="AudioStream" uid="uid://crcdv0y6r5jmp" path="res://Audio/Music/MainMenuTheme.wav" id="4_yt5uq"]
[ext_resource type="AudioStream" uid="uid://cetxmc8txfe7" path="res://Audio/SFX/Enemy/Explosion_Mix.wav" id="5_bkskt"]
[ext_resource type="AudioStream" uid="uid://ong27xk4ih83" path="res://Audio/Music/AutoAuswahlTheme.wav" id="5_jgdfs"]
[ext_resource type="AudioStream" uid="uid://duwfgtl3vdwqk" path="res://Audio/PickUps/HealthPickup.wav" id="6_p57gu"]
[ext_resource type="AudioStream" uid="uid://bud2k7qb3rvh4" path="res://Audio/Music/InGameTheme.wav" id="8_uf8pc"]
[ext_resource type="AudioStream" uid="uid://nhq03k8lsprm" path="res://Audio/SFX/Enemy/BossRoar.wav" id="9_t0fht"]
[ext_resource type="AudioStream" uid="uid://cbgkflechcuga" path="res://Audio/PickUps/BulletUp.wav" id="10_nds2t"]
[ext_resource type="AudioStream" uid="uid://ccf0desqn8gka" path="res://Audio/PickUps/Score +.wav" id="11_62ysu"]
[ext_resource type="AudioStream" uid="uid://dg66khjh8thys" path="res://Audio/SFX/Enemy/SFX_Boss_Death.wav" id="12_rkvny"]
[ext_resource type="AudioStream" uid="uid://bu0ut7f7ulqw7" path="res://Audio/SFX/Enemy/SFX_Boss_Melee.wav" id="13_fhlm3"]
[ext_resource type="AudioStream" uid="uid://lbu575i5wl1d" path="res://Audio/Music/GameOverTheme.wav" id="14_dvmjp"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ej65s"]
streams_count = 2
stream_0/stream = ExtResource("2_lq12b")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_mjbdb")
stream_1/weight = 1.0

[node name="AudioPlayer" type="Node2D"]
process_mode = 3
script = ExtResource("1_xlrje")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ej65s")
bus = &"SFX"

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yt5uq")
volume_db = 11.784
autoplay = true
bus = &"Music"

[node name="CarSelectTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jgdfs")
volume_db = 11.271
bus = &"Music"

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bkskt")
volume_db = -15.605
pitch_scale = 0.53
bus = &"SFX"

[node name="HealthPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_p57gu")
volume_db = 3.073
pitch_scale = 1.43
bus = &"SFX"

[node name="InGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_uf8pc")
volume_db = 9.307
bus = &"Music"

[node name="BossFight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t0fht")
volume_db = 8.708
bus = &"SFX"

[node name="BulletUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_nds2t")
volume_db = -4.611
bus = &"SFX"

[node name="Score +" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_62ysu")
bus = &"SFX"

[node name="BossDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_rkvny")
volume_db = 6.661
bus = &"SFX"

[node name="BossMelee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_fhlm3")
volume_db = 6.66
bus = &"SFX"

[node name="GameOverTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_dvmjp")
volume_db = 2.562
bus = &"Music"
